--- a/.deps/ccminer-bench.Po
+++ b/.deps/ccminer-bench.Po
@@ -1,5 +1,6 @@
-equi/ccminer-equi-stratum.o: equi/equi-stratum.cpp \
-  /data/data/com.termux/files/usr/include/c++/v1/errno.h \
+ccminer-bench.o: bench.cpp \
+  /data/data/com.termux/files/usr/include/unistd.h \
+  /data/data/com.termux/files/usr/include/c++/v1/stddef.h \
   /data/data/com.termux/files/usr/include/c++/v1/__config \
   /data/data/com.termux/files/usr/include/c++/v1/__config_site \
   /data/data/com.termux/files/usr/include/features.h \
@@ -8,14 +9,6 @@ equi/ccminer-equi-stratum.o: equi/equi-stratum.cpp \
   /data/data/com.termux/files/usr/include/android/api-level.h \
   /data/data/com.termux/files/usr/include/bits/get_device_api_level_inlines.h \
   /data/data/com.termux/files/usr/include/android/ndk-version.h \
-  /data/data/com.termux/files/usr/include/errno.h \
-  /data/data/com.termux/files/usr/include/linux/errno.h \
-  /data/data/com.termux/files/usr/include/aarch64-linux-android/asm/errno.h \
-  /data/data/com.termux/files/usr/include/asm-generic/errno.h \
-  /data/data/com.termux/files/usr/include/asm-generic/errno-base.h \
-  /data/data/com.termux/files/usr/include/c++/v1/string.h \
-  /data/data/com.termux/files/usr/include/string.h \
-  /data/data/com.termux/files/usr/include/c++/v1/stddef.h \
   /data/data/com.termux/files/usr/lib/clang/19/include/stddef.h \
   /data/data/com.termux/files/usr/lib/clang/19/include/__stddef_header_macro.h \
   /data/data/com.termux/files/usr/lib/clang/19/include/__stddef_ptrdiff_t.h \
@@ -25,8 +18,6 @@ equi/ccminer-equi-stratum.o: equi/equi-stratum.cpp \
   /data/data/com.termux/files/usr/lib/clang/19/include/__stddef_nullptr_t.h \
   /data/data/com.termux/files/usr/lib/clang/19/include/__stddef_max_align_t.h \
   /data/data/com.termux/files/usr/lib/clang/19/include/__stddef_offsetof.h \
-  /data/data/com.termux/files/usr/include/xlocale.h \
-  /data/data/com.termux/files/usr/include/bits/strcasecmp.h \
   /data/data/com.termux/files/usr/include/sys/types.h \
   /data/data/com.termux/files/usr/include/c++/v1/stdint.h \
   /data/data/com.termux/files/usr/lib/clang/19/include/stdint.h \
@@ -45,8 +36,6 @@ equi/ccminer-equi-stratum.o: equi/equi-stratum.cpp \
   /data/data/com.termux/files/usr/include/aarch64-linux-android/asm/posix_types.h \
   /data/data/com.termux/files/usr/include/asm-generic/posix_types.h \
   /data/data/com.termux/files/usr/include/bits/pthread_types.h \
-  /data/data/com.termux/files/usr/include/strings.h \
-  /data/data/com.termux/files/usr/include/unistd.h \
   /data/data/com.termux/files/usr/include/sys/select.h \
   /data/data/com.termux/files/usr/include/linux/time.h \
   /data/data/com.termux/files/usr/include/bits/timespec.h \
@@ -90,6 +79,7 @@ equi/ccminer-equi-stratum.o: equi/equi-stratum.cpp \
   /data/data/com.termux/files/usr/include/sched.h \
   /data/data/com.termux/files/usr/include/linux/sched.h \
   /data/data/com.termux/files/usr/include/time.h \
+  /data/data/com.termux/files/usr/include/xlocale.h \
   /data/data/com.termux/files/usr/include/jansson.h \
   /data/data/com.termux/files/usr/lib/clang/19/include/stdarg.h \
   /data/data/com.termux/files/usr/lib/clang/19/include/__stdarg_header_macro.h \
@@ -100,6 +90,10 @@ equi/ccminer-equi-stratum.o: equi/equi-stratum.cpp \
   /data/data/com.termux/files/usr/lib/clang/19/include/__stdarg_va_copy.h \
   /data/data/com.termux/files/usr/include/c++/v1/stdio.h \
   /data/data/com.termux/files/usr/include/stdio.h \
+  /data/data/com.termux/files/usr/include/c++/v1/string.h \
+  /data/data/com.termux/files/usr/include/string.h \
+  /data/data/com.termux/files/usr/include/bits/strcasecmp.h \
+  /data/data/com.termux/files/usr/include/strings.h \
   /data/data/com.termux/files/usr/include/aarch64-linux-android/asm/fcntl.h \
   /data/data/com.termux/files/usr/include/asm-generic/fcntl.h \
   /data/data/com.termux/files/usr/include/bits/flock64.h \
@@ -134,8 +128,9 @@ equi/ccminer-equi-stratum.o: equi/equi-stratum.cpp \
   /data/data/com.termux/files/usr/include/libgen.h \
   /data/data/com.termux/files/usr/include/syslog.h \
   /data/data/com.termux/files/usr/include/sys/endian.h \
-  /data/data/com.termux/files/usr/include/getopt.h equi/equihash.h
-/data/data/com.termux/files/usr/include/c++/v1/errno.h:
+  /data/data/com.termux/files/usr/include/getopt.h algos.h
+/data/data/com.termux/files/usr/include/unistd.h:
+/data/data/com.termux/files/usr/include/c++/v1/stddef.h:
 /data/data/com.termux/files/usr/include/c++/v1/__config:
 /data/data/com.termux/files/usr/include/c++/v1/__config_site:
 /data/data/com.termux/files/usr/include/features.h:
@@ -144,14 +139,6 @@ equi/ccminer-equi-stratum.o: equi/equi-stratum.cpp \
 /data/data/com.termux/files/usr/include/android/api-level.h:
 /data/data/com.termux/files/usr/include/bits/get_device_api_level_inlines.h:
 /data/data/com.termux/files/usr/include/android/ndk-version.h:
-/data/data/com.termux/files/usr/include/errno.h:
-/data/data/com.termux/files/usr/include/linux/errno.h:
-/data/data/com.termux/files/usr/include/aarch64-linux-android/asm/errno.h:
-/data/data/com.termux/files/usr/include/asm-generic/errno.h:
-/data/data/com.termux/files/usr/include/asm-generic/errno-base.h:
-/data/data/com.termux/files/usr/include/c++/v1/string.h:
-/data/data/com.termux/files/usr/include/string.h:
-/data/data/com.termux/files/usr/include/c++/v1/stddef.h:
 /data/data/com.termux/files/usr/lib/clang/19/include/stddef.h:
 /data/data/com.termux/files/usr/lib/clang/19/include/__stddef_header_macro.h:
 /data/data/com.termux/files/usr/lib/clang/19/include/__stddef_ptrdiff_t.h:
@@ -161,8 +148,6 @@ equi/ccminer-equi-stratum.o: equi/equi-stratum.cpp \
 /data/data/com.termux/files/usr/lib/clang/19/include/__stddef_nullptr_t.h:
 /data/data/com.termux/files/usr/lib/clang/19/include/__stddef_max_align_t.h:
 /data/data/com.termux/files/usr/lib/clang/19/include/__stddef_offsetof.h:
-/data/data/com.termux/files/usr/include/xlocale.h:
-/data/data/com.termux/files/usr/include/bits/strcasecmp.h:
 /data/data/com.termux/files/usr/include/sys/types.h:
 /data/data/com.termux/files/usr/include/c++/v1/stdint.h:
 /data/data/com.termux/files/usr/lib/clang/19/include/stdint.h:
@@ -181,8 +166,6 @@ equi/ccminer-equi-stratum.o: equi/equi-stratum.cpp \
 /data/data/com.termux/files/usr/include/aarch64-linux-android/asm/posix_types.h:
 /data/data/com.termux/files/usr/include/asm-generic/posix_types.h:
 /data/data/com.termux/files/usr/include/bits/pthread_types.h:
-/data/data/com.termux/files/usr/include/strings.h:
-/data/data/com.termux/files/usr/include/unistd.h:
 /data/data/com.termux/files/usr/include/sys/select.h:
 /data/data/com.termux/files/usr/include/linux/time.h:
 /data/data/com.termux/files/usr/include/bits/timespec.h:
@@ -227,6 +210,7 @@ ccminer-config.h:
 /data/data/com.termux/files/usr/include/sched.h:
 /data/data/com.termux/files/usr/include/linux/sched.h:
 /data/data/com.termux/files/usr/include/time.h:
+/data/data/com.termux/files/usr/include/xlocale.h:
 /data/data/com.termux/files/usr/include/jansson.h:
 /data/data/com.termux/files/usr/lib/clang/19/include/stdarg.h:
 /data/data/com.termux/files/usr/lib/clang/19/include/__stdarg_header_macro.h:
@@ -237,6 +221,10 @@ ccminer-config.h:
 /data/data/com.termux/files/usr/lib/clang/19/include/__stdarg_va_copy.h:
 /data/data/com.termux/files/usr/include/c++/v1/stdio.h:
 /data/data/com.termux/files/usr/include/stdio.h:
+/data/data/com.termux/files/usr/include/c++/v1/string.h:
+/data/data/com.termux/files/usr/include/string.h:
+/data/data/com.termux/files/usr/include/bits/strcasecmp.h:
+/data/data/com.termux/files/usr/include/strings.h:
 /data/data/com.termux/files/usr/include/aarch64-linux-android/asm/fcntl.h:
 /data/data/com.termux/files/usr/include/asm-generic/fcntl.h:
 /data/data/com.termux/files/usr/include/bits/flock64.h:
@@ -273,4 +261,4 @@ compat.h:
 /data/data/com.termux/files/usr/include/syslog.h:
 /data/data/com.termux/files/usr/include/sys/endian.h:
 /data/data/com.termux/files/usr/include/getopt.h:
-equi/equihash.h:
+algos.h:
