--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -1,10 +1,10 @@
-m4trace:aclocal.m4:1007: -1- AC_SUBST([am__quote])
-m4trace:aclocal.m4:1007: -1- AC_SUBST_TRACE([am__quote])
-m4trace:aclocal.m4:1007: -1- m4_pattern_allow([^am__quote$])
+m4trace:aclocal.m4:991: -1- AC_SUBST([am__quote])
+m4trace:aclocal.m4:991: -1- AC_SUBST_TRACE([am__quote])
+m4trace:aclocal.m4:991: -1- m4_pattern_allow([^am__quote$])
 m4trace:configure.ac:1: -1- AC_INIT([ccminer_CPU], [3.8.3-4], [], [ccminer], [http://github.com/monkins1010/ccminer])
 m4trace:configure.ac:1: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.ac:1: -1- m4_pattern_forbid([_AC_])
-m4trace:configure.ac:1: -1- m4_pattern_forbid([^LIBOBJS$], [do not use LIBOBJS directly, use AC_LIBOBJ (see section `AC_LIBOBJ vs LIBOBJS'])
+m4trace:configure.ac:1: -1- m4_pattern_forbid([^LIBOBJS$], [do not use LIBOBJS directly, use AC_LIBOBJ (see section 'AC_LIBOBJ vs LIBOBJS'])
 m4trace:configure.ac:1: -1- m4_pattern_allow([^AS_FLAGS$])
 m4trace:configure.ac:1: -1- m4_pattern_forbid([^_?m4_])
 m4trace:configure.ac:1: -1- m4_pattern_forbid([^dnl$])
@@ -153,8 +153,8 @@ m4trace:configure.ac:1: -1- AC_SUBST([target_alias])
 m4trace:configure.ac:1: -1- AC_SUBST_TRACE([target_alias])
 m4trace:configure.ac:1: -1- m4_pattern_allow([^target_alias$])
 m4trace:configure.ac:4: -1- AC_CANONICAL_SYSTEM
-m4trace:configure.ac:4: -1- _m4_warn([obsolete], [The macro `AC_CANONICAL_SYSTEM' is obsolete.
-You should run autoupdate.], [../../lib/autoconf/general.m4:1868: AC_CANONICAL_SYSTEM is expanded from...
+m4trace:configure.ac:4: -1- _m4_warn([obsolete], [The macro 'AC_CANONICAL_SYSTEM' is obsolete.
+You should run autoupdate.], [/home/builder/.termux-build/autoconf/src/lib/autoconf/general.m4:2081: AC_CANONICAL_SYSTEM is expanded from...
 configure.ac:4: the top level])
 m4trace:configure.ac:4: -1- AC_CANONICAL_TARGET
 m4trace:configure.ac:4: -1- AC_CANONICAL_HOST
@@ -199,7 +199,7 @@ m4trace:configure.ac:4: -1- AC_SUBST_TRACE([target_os])
 m4trace:configure.ac:4: -1- m4_pattern_allow([^target_os$])
 m4trace:configure.ac:6: -1- AM_INIT_AUTOMAKE([foreign subdir-objects])
 m4trace:configure.ac:6: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
-m4trace:configure.ac:6: -1- AM_AUTOMAKE_VERSION([1.16.1])
+m4trace:configure.ac:6: -1- AM_AUTOMAKE_VERSION([1.17])
 m4trace:configure.ac:6: -1- AC_REQUIRE_AUX_FILE([install-sh])
 m4trace:configure.ac:6: -1- AC_SUBST([INSTALL_PROGRAM])
 m4trace:configure.ac:6: -1- AC_SUBST_TRACE([INSTALL_PROGRAM])
@@ -281,7 +281,15 @@ m4trace:configure.ac:6: -1- m4_pattern_allow([^am__tar$])
 m4trace:configure.ac:6: -1- AC_SUBST([am__untar])
 m4trace:configure.ac:6: -1- AC_SUBST_TRACE([am__untar])
 m4trace:configure.ac:6: -1- m4_pattern_allow([^am__untar$])
-m4trace:configure.ac:6: -1- AM_SILENT_RULES
+m4trace:configure.ac:6: -1- AC_SUBST([CTAGS])
+m4trace:configure.ac:6: -1- AC_SUBST_TRACE([CTAGS])
+m4trace:configure.ac:6: -1- m4_pattern_allow([^CTAGS$])
+m4trace:configure.ac:6: -1- AC_SUBST([ETAGS])
+m4trace:configure.ac:6: -1- AC_SUBST_TRACE([ETAGS])
+m4trace:configure.ac:6: -1- m4_pattern_allow([^ETAGS$])
+m4trace:configure.ac:6: -1- AC_SUBST([CSCOPE])
+m4trace:configure.ac:6: -1- AC_SUBST_TRACE([CSCOPE])
+m4trace:configure.ac:6: -1- m4_pattern_allow([^CSCOPE$])
 m4trace:configure.ac:6: -1- AC_SUBST([AM_V])
 m4trace:configure.ac:6: -1- AC_SUBST_TRACE([AM_V])
 m4trace:configure.ac:6: -1- m4_pattern_allow([^AM_V$])
@@ -297,6 +305,12 @@ m4trace:configure.ac:6: -1- AC_SUBST([AM_BACKSLASH])
 m4trace:configure.ac:6: -1- AC_SUBST_TRACE([AM_BACKSLASH])
 m4trace:configure.ac:6: -1- m4_pattern_allow([^AM_BACKSLASH$])
 m4trace:configure.ac:6: -1- _AM_SUBST_NOTMAKE([AM_BACKSLASH])
+m4trace:configure.ac:6: -1- AC_SUBST([am__rm_f_notfound])
+m4trace:configure.ac:6: -1- AC_SUBST_TRACE([am__rm_f_notfound])
+m4trace:configure.ac:6: -1- m4_pattern_allow([^am__rm_f_notfound$])
+m4trace:configure.ac:6: -1- AC_SUBST([am__xargs_n])
+m4trace:configure.ac:6: -1- AC_SUBST_TRACE([am__xargs_n])
+m4trace:configure.ac:6: -1- m4_pattern_allow([^am__xargs_n$])
 m4trace:configure.ac:7: -1- AC_CONFIG_HEADERS([ccminer-config.h])
 m4trace:configure.ac:10: -1- AM_MAINTAINER_MODE
 m4trace:configure.ac:10: -1- AM_CONDITIONAL([MAINTAINER_MODE], [test $USE_MAINTAINER_MODE = yes])
@@ -311,6 +325,9 @@ m4trace:configure.ac:10: -1- _AM_SUBST_NOTMAKE([MAINTAINER_MODE_FALSE])
 m4trace:configure.ac:10: -1- AC_SUBST([MAINT])
 m4trace:configure.ac:10: -1- AC_SUBST_TRACE([MAINT])
 m4trace:configure.ac:10: -1- m4_pattern_allow([^MAINT$])
+m4trace:configure.ac:13: -1- _m4_warn([obsolete], [The macro 'AC_PROG_CC_C99' is obsolete.
+You should run autoupdate.], [/home/builder/.termux-build/autoconf/src/lib/autoconf/c.m4:1662: AC_PROG_CC_C99 is expanded from...
+configure.ac:13: the top level])
 m4trace:configure.ac:13: -1- AC_SUBST([CC])
 m4trace:configure.ac:13: -1- AC_SUBST_TRACE([CC])
 m4trace:configure.ac:13: -1- m4_pattern_allow([^CC$])
@@ -341,6 +358,9 @@ m4trace:configure.ac:13: -1- m4_pattern_allow([^CC$])
 m4trace:configure.ac:13: -1- AC_SUBST([ac_ct_CC])
 m4trace:configure.ac:13: -1- AC_SUBST_TRACE([ac_ct_CC])
 m4trace:configure.ac:13: -1- m4_pattern_allow([^ac_ct_CC$])
+m4trace:configure.ac:13: -1- AC_SUBST([CC])
+m4trace:configure.ac:13: -1- AC_SUBST_TRACE([CC])
+m4trace:configure.ac:13: -1- m4_pattern_allow([^CC$])
 m4trace:configure.ac:13: -1- AC_SUBST([EXEEXT], [$ac_cv_exeext])
 m4trace:configure.ac:13: -1- AC_SUBST_TRACE([EXEEXT])
 m4trace:configure.ac:13: -1- m4_pattern_allow([^EXEEXT$])
@@ -385,21 +405,9 @@ m4trace:configure.ac:13: -1- AC_SUBST_TRACE([am__fastdepCC_FALSE])
 m4trace:configure.ac:13: -1- m4_pattern_allow([^am__fastdepCC_FALSE$])
 m4trace:configure.ac:13: -1- _AM_SUBST_NOTMAKE([am__fastdepCC_TRUE])
 m4trace:configure.ac:13: -1- _AM_SUBST_NOTMAKE([am__fastdepCC_FALSE])
-m4trace:configure.ac:14: -1- AC_SUBST([CPP])
-m4trace:configure.ac:14: -1- AC_SUBST_TRACE([CPP])
-m4trace:configure.ac:14: -1- m4_pattern_allow([^CPP$])
-m4trace:configure.ac:14: -1- AC_SUBST([CPPFLAGS])
-m4trace:configure.ac:14: -1- AC_SUBST_TRACE([CPPFLAGS])
-m4trace:configure.ac:14: -1- m4_pattern_allow([^CPPFLAGS$])
-m4trace:configure.ac:14: -1- AC_SUBST([CPP])
-m4trace:configure.ac:14: -1- AC_SUBST_TRACE([CPP])
-m4trace:configure.ac:14: -1- m4_pattern_allow([^CPP$])
-m4trace:configure.ac:14: -1- AC_SUBST([GREP])
-m4trace:configure.ac:14: -1- AC_SUBST_TRACE([GREP])
-m4trace:configure.ac:14: -1- m4_pattern_allow([^GREP$])
-m4trace:configure.ac:14: -1- AC_SUBST([EGREP])
-m4trace:configure.ac:14: -1- AC_SUBST_TRACE([EGREP])
-m4trace:configure.ac:14: -1- m4_pattern_allow([^EGREP$])
+m4trace:configure.ac:14: -1- _m4_warn([obsolete], [The macro 'AC_PROG_GCC_TRADITIONAL' is obsolete.
+You should run autoupdate.], [/home/builder/.termux-build/autoconf/src/lib/autoconf/c.m4:1676: AC_PROG_GCC_TRADITIONAL is expanded from...
+configure.ac:14: the top level])
 m4trace:configure.ac:15: -1- AM_PROG_CC_C_O
 m4trace:configure.ac:16: -1- AC_SUBST([CCAS])
 m4trace:configure.ac:16: -1- AC_SUBST_TRACE([CCAS])
@@ -462,70 +470,86 @@ m4trace:configure.ac:18: -1- _AM_SUBST_NOTMAKE([am__fastdepCXX_FALSE])
 m4trace:configure.ac:19: -1- AC_SUBST([OPENMP_CFLAGS])
 m4trace:configure.ac:19: -1- AC_SUBST_TRACE([OPENMP_CFLAGS])
 m4trace:configure.ac:19: -1- m4_pattern_allow([^OPENMP_CFLAGS$])
+m4trace:configure.ac:22: -1- _m4_warn([obsolete], [The macro 'AC_HEADER_STDC' is obsolete.
+You should run autoupdate.], [/home/builder/.termux-build/autoconf/src/lib/autoconf/headers.m4:663: AC_HEADER_STDC is expanded from...
+configure.ac:22: the top level])
+m4trace:configure.ac:22: -1- AH_OUTPUT([HAVE_STDIO_H], [/* Define to 1 if you have the <stdio.h> header file. */
+@%:@undef HAVE_STDIO_H])
+m4trace:configure.ac:22: -1- AH_OUTPUT([HAVE_STDLIB_H], [/* Define to 1 if you have the <stdlib.h> header file. */
+@%:@undef HAVE_STDLIB_H])
+m4trace:configure.ac:22: -1- AH_OUTPUT([HAVE_STRING_H], [/* Define to 1 if you have the <string.h> header file. */
+@%:@undef HAVE_STRING_H])
+m4trace:configure.ac:22: -1- AH_OUTPUT([HAVE_INTTYPES_H], [/* Define to 1 if you have the <inttypes.h> header file. */
+@%:@undef HAVE_INTTYPES_H])
+m4trace:configure.ac:22: -1- AH_OUTPUT([HAVE_STDINT_H], [/* Define to 1 if you have the <stdint.h> header file. */
+@%:@undef HAVE_STDINT_H])
+m4trace:configure.ac:22: -1- AH_OUTPUT([HAVE_STRINGS_H], [/* Define to 1 if you have the <strings.h> header file. */
+@%:@undef HAVE_STRINGS_H])
+m4trace:configure.ac:22: -1- AH_OUTPUT([HAVE_SYS_STAT_H], [/* Define to 1 if you have the <sys/stat.h> header file. */
+@%:@undef HAVE_SYS_STAT_H])
+m4trace:configure.ac:22: -1- AH_OUTPUT([HAVE_SYS_TYPES_H], [/* Define to 1 if you have the <sys/types.h> header file. */
+@%:@undef HAVE_SYS_TYPES_H])
+m4trace:configure.ac:22: -1- AH_OUTPUT([HAVE_UNISTD_H], [/* Define to 1 if you have the <unistd.h> header file. */
+@%:@undef HAVE_UNISTD_H])
 m4trace:configure.ac:22: -1- AC_DEFINE_TRACE_LITERAL([STDC_HEADERS])
 m4trace:configure.ac:22: -1- m4_pattern_allow([^STDC_HEADERS$])
-m4trace:configure.ac:22: -1- AH_OUTPUT([STDC_HEADERS], [/* Define to 1 if you have the ANSI C header files. */
+m4trace:configure.ac:22: -1- AH_OUTPUT([STDC_HEADERS], [/* Define to 1 if all of the C89 standard headers exist (not just the ones
+   required in a freestanding environment). This macro is provided for
+   backward compatibility; new code need not use it. */
 @%:@undef STDC_HEADERS])
+m4trace:configure.ac:22: -1- AC_SUBST([GREP])
+m4trace:configure.ac:22: -1- AC_SUBST_TRACE([GREP])
+m4trace:configure.ac:22: -1- m4_pattern_allow([^GREP$])
+m4trace:configure.ac:22: -1- AC_SUBST([EGREP])
+m4trace:configure.ac:22: -1- AC_SUBST_TRACE([EGREP])
+m4trace:configure.ac:22: -1- m4_pattern_allow([^EGREP$])
 m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_SYS_ENDIAN_H], [/* Define to 1 if you have the <sys/endian.h> header file. */
 @%:@undef HAVE_SYS_ENDIAN_H])
+m4trace:configure.ac:23: -1- AC_DEFINE_TRACE_LITERAL([HAVE_SYS_ENDIAN_H])
+m4trace:configure.ac:23: -1- m4_pattern_allow([^HAVE_SYS_ENDIAN_H$])
 m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_SYS_PARAM_H], [/* Define to 1 if you have the <sys/param.h> header file. */
 @%:@undef HAVE_SYS_PARAM_H])
+m4trace:configure.ac:23: -1- AC_DEFINE_TRACE_LITERAL([HAVE_SYS_PARAM_H])
+m4trace:configure.ac:23: -1- m4_pattern_allow([^HAVE_SYS_PARAM_H$])
 m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_SYSLOG_H], [/* Define to 1 if you have the <syslog.h> header file. */
 @%:@undef HAVE_SYSLOG_H])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_SYS_TYPES_H], [/* Define to 1 if you have the <sys/types.h> header file. */
-@%:@undef HAVE_SYS_TYPES_H])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_SYS_STAT_H], [/* Define to 1 if you have the <sys/stat.h> header file. */
-@%:@undef HAVE_SYS_STAT_H])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_STDLIB_H], [/* Define to 1 if you have the <stdlib.h> header file. */
-@%:@undef HAVE_STDLIB_H])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_STRING_H], [/* Define to 1 if you have the <string.h> header file. */
-@%:@undef HAVE_STRING_H])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_MEMORY_H], [/* Define to 1 if you have the <memory.h> header file. */
-@%:@undef HAVE_MEMORY_H])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_STRINGS_H], [/* Define to 1 if you have the <strings.h> header file. */
-@%:@undef HAVE_STRINGS_H])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_INTTYPES_H], [/* Define to 1 if you have the <inttypes.h> header file. */
-@%:@undef HAVE_INTTYPES_H])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_STDINT_H], [/* Define to 1 if you have the <stdint.h> header file. */
-@%:@undef HAVE_STDINT_H])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_UNISTD_H], [/* Define to 1 if you have the <unistd.h> header file. */
-@%:@undef HAVE_UNISTD_H])
+m4trace:configure.ac:23: -1- AC_DEFINE_TRACE_LITERAL([HAVE_SYSLOG_H])
+m4trace:configure.ac:23: -1- m4_pattern_allow([^HAVE_SYSLOG_H$])
 m4trace:configure.ac:26: -1- AH_OUTPUT([HAVE_SYS_SYSCTL_H], [/* Define to 1 if you have the <sys/sysctl.h> header file. */
 @%:@undef HAVE_SYS_SYSCTL_H])
 m4trace:configure.ac:26: -1- AC_DEFINE_TRACE_LITERAL([HAVE_SYS_SYSCTL_H])
 m4trace:configure.ac:26: -1- m4_pattern_allow([^HAVE_SYS_SYSCTL_H$])
 m4trace:configure.ac:33: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_BE32DEC])
 m4trace:configure.ac:33: -1- m4_pattern_allow([^HAVE_DECL_BE32DEC$])
-m4trace:configure.ac:33: -1- AH_OUTPUT([HAVE_DECL_BE32DEC], [/* Define to 1 if you have the declaration of `be32dec\', and to 0 if you
+m4trace:configure.ac:33: -1- AH_OUTPUT([HAVE_DECL_BE32DEC], [/* Define to 1 if you have the declaration of \'be32dec\', and to 0 if you
    don\'t. */
 @%:@undef HAVE_DECL_BE32DEC])
 m4trace:configure.ac:33: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_LE32DEC])
 m4trace:configure.ac:33: -1- m4_pattern_allow([^HAVE_DECL_LE32DEC$])
-m4trace:configure.ac:33: -1- AH_OUTPUT([HAVE_DECL_LE32DEC], [/* Define to 1 if you have the declaration of `le32dec\', and to 0 if you
+m4trace:configure.ac:33: -1- AH_OUTPUT([HAVE_DECL_LE32DEC], [/* Define to 1 if you have the declaration of \'le32dec\', and to 0 if you
    don\'t. */
 @%:@undef HAVE_DECL_LE32DEC])
 m4trace:configure.ac:33: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_BE32ENC])
 m4trace:configure.ac:33: -1- m4_pattern_allow([^HAVE_DECL_BE32ENC$])
-m4trace:configure.ac:33: -1- AH_OUTPUT([HAVE_DECL_BE32ENC], [/* Define to 1 if you have the declaration of `be32enc\', and to 0 if you
+m4trace:configure.ac:33: -1- AH_OUTPUT([HAVE_DECL_BE32ENC], [/* Define to 1 if you have the declaration of \'be32enc\', and to 0 if you
    don\'t. */
 @%:@undef HAVE_DECL_BE32ENC])
 m4trace:configure.ac:33: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_LE32ENC])
 m4trace:configure.ac:33: -1- m4_pattern_allow([^HAVE_DECL_LE32ENC$])
-m4trace:configure.ac:33: -1- AH_OUTPUT([HAVE_DECL_LE32ENC], [/* Define to 1 if you have the declaration of `le32enc\', and to 0 if you
+m4trace:configure.ac:33: -1- AH_OUTPUT([HAVE_DECL_LE32ENC], [/* Define to 1 if you have the declaration of \'le32enc\', and to 0 if you
    don\'t. */
 @%:@undef HAVE_DECL_LE32ENC])
 m4trace:configure.ac:40: -1- AC_DEFINE_TRACE_LITERAL([size_t])
 m4trace:configure.ac:40: -1- m4_pattern_allow([^size_t$])
-m4trace:configure.ac:40: -1- AH_OUTPUT([size_t], [/* Define to `unsigned int\' if <sys/types.h> does not define. */
+m4trace:configure.ac:40: -1- AH_OUTPUT([size_t], [/* Define as \'unsigned int\' if <stddef.h> doesn\'t define. */
 @%:@undef size_t])
 m4trace:configure.ac:40: -1- AC_DEFINE_TRACE_LITERAL([HAVE_ALLOCA_H])
 m4trace:configure.ac:40: -1- m4_pattern_allow([^HAVE_ALLOCA_H$])
-m4trace:configure.ac:40: -1- AH_OUTPUT([HAVE_ALLOCA_H], [/* Define to 1 if you have <alloca.h> and it should be used (not on Ultrix).
-   */
+m4trace:configure.ac:40: -1- AH_OUTPUT([HAVE_ALLOCA_H], [/* Define to 1 if <alloca.h> works. */
 @%:@undef HAVE_ALLOCA_H])
 m4trace:configure.ac:40: -1- AC_DEFINE_TRACE_LITERAL([HAVE_ALLOCA])
 m4trace:configure.ac:40: -1- m4_pattern_allow([^HAVE_ALLOCA$])
-m4trace:configure.ac:40: -1- AH_OUTPUT([HAVE_ALLOCA], [/* Define to 1 if you have `alloca\', as a function or macro. */
+m4trace:configure.ac:40: -1- AH_OUTPUT([HAVE_ALLOCA], [/* Define to 1 if you have \'alloca\', as a function or macro. */
 @%:@undef HAVE_ALLOCA])
 m4trace:configure.ac:40: -1- AC_LIBSOURCE([alloca.c])
 m4trace:configure.ac:40: -1- AC_SUBST([ALLOCA], [\${LIBOBJDIR}alloca.$ac_objext])
@@ -533,36 +557,30 @@ m4trace:configure.ac:40: -1- AC_SUBST_TRACE([ALLOCA])
 m4trace:configure.ac:40: -1- m4_pattern_allow([^ALLOCA$])
 m4trace:configure.ac:40: -1- AC_DEFINE_TRACE_LITERAL([C_ALLOCA])
 m4trace:configure.ac:40: -1- m4_pattern_allow([^C_ALLOCA$])
-m4trace:configure.ac:40: -1- AH_OUTPUT([C_ALLOCA], [/* Define to 1 if using `alloca.c\'. */
+m4trace:configure.ac:40: -1- AH_OUTPUT([C_ALLOCA], [/* Define to 1 if using \'alloca.c\'. */
 @%:@undef C_ALLOCA])
-m4trace:configure.ac:40: -1- AC_DEFINE_TRACE_LITERAL([CRAY_STACKSEG_END])
-m4trace:configure.ac:40: -1- m4_pattern_allow([^CRAY_STACKSEG_END$])
-m4trace:configure.ac:40: -1- AH_OUTPUT([CRAY_STACKSEG_END], [/* Define to one of `_getb67\', `GETB67\', `getb67\' for Cray-2 and Cray-YMP
-   systems. This function is required for `alloca.c\' support on those systems.
-   */
-@%:@undef CRAY_STACKSEG_END])
 m4trace:configure.ac:40: -1- AH_OUTPUT([STACK_DIRECTION], [/* If using the C implementation of alloca, define if you know the
    direction of stack growth for your system; otherwise it will be
    automatically deduced at runtime.
 	STACK_DIRECTION > 0 => grows toward higher addresses
 	STACK_DIRECTION < 0 => grows toward lower addresses
 	STACK_DIRECTION = 0 => direction of growth unknown */
-@%:@undef STACK_DIRECTION])
+#undef STACK_DIRECTION])
 m4trace:configure.ac:40: -1- AC_DEFINE_TRACE_LITERAL([STACK_DIRECTION])
 m4trace:configure.ac:40: -1- m4_pattern_allow([^STACK_DIRECTION$])
-m4trace:configure.ac:41: -1- AH_OUTPUT([HAVE_GETOPT_LONG], [/* Define to 1 if you have the `getopt_long\' function. */
+m4trace:configure.ac:41: -1- AH_OUTPUT([HAVE_GETOPT_LONG], [/* Define to 1 if you have the \'getopt_long\' function. */
 @%:@undef HAVE_GETOPT_LONG])
 m4trace:configure.ac:41: -1- AC_DEFINE_TRACE_LITERAL([HAVE_GETOPT_LONG])
 m4trace:configure.ac:41: -1- m4_pattern_allow([^HAVE_GETOPT_LONG$])
-m4trace:configure.ac:79: -1- AH_OUTPUT([HAVE_LIBZ], [/* Define to 1 if you have the `z\' library (-lz). */
+m4trace:configure.ac:79: -1- AH_OUTPUT([HAVE_LIBZ], [/* Define to 1 if you have the \'z\' library (-lz). */
 @%:@undef HAVE_LIBZ])
 m4trace:configure.ac:79: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LIBZ])
 m4trace:configure.ac:79: -1- m4_pattern_allow([^HAVE_LIBZ$])
-m4trace:configure.ac:80: -1- AH_OUTPUT([HAVE_LIBSSL], [/* Define to 1 if you have the `ssl\' library (-lssl). */
+m4trace:configure.ac:80: -1- AH_OUTPUT([HAVE_LIBSSL], [/* Define to 1 if you have the \'ssl\' library (-lssl). */
 @%:@undef HAVE_LIBSSL])
 m4trace:configure.ac:80: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LIBSSL])
 m4trace:configure.ac:80: -1- m4_pattern_allow([^HAVE_LIBSSL$])
-m4trace:configure.ac:81: -1- AH_OUTPUT([HAVE_LIBCRYPTO], [/* Define to 1 if you have the `crypto\' library (-lcrypto). */
+m4trace:configure.ac:81: -1- AH_OUTPUT([HAVE_LIBCRYPTO], [/* Define to 1 if you have the \'crypto\' library (-lcrypto). */
 @%:@undef HAVE_LIBCRYPTO])
 m4trace:configure.ac:81: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LIBCRYPTO])
 m4trace:configure.ac:81: -1- m4_pattern_allow([^HAVE_LIBCRYPTO$])
@@ -611,6 +629,15 @@ m4trace:configure.ac:87: -1- AC_SUBST_TRACE([ARCH_x86_64_FALSE])
 m4trace:configure.ac:87: -1- m4_pattern_allow([^ARCH_x86_64_FALSE$])
 m4trace:configure.ac:87: -1- _AM_SUBST_NOTMAKE([ARCH_x86_64_TRUE])
 m4trace:configure.ac:87: -1- _AM_SUBST_NOTMAKE([ARCH_x86_64_FALSE])
+m4trace:configure.ac:92: -1- AC_SUBST([CPP])
+m4trace:configure.ac:92: -1- AC_SUBST_TRACE([CPP])
+m4trace:configure.ac:92: -1- m4_pattern_allow([^CPP$])
+m4trace:configure.ac:92: -1- AC_SUBST([CPPFLAGS])
+m4trace:configure.ac:92: -1- AC_SUBST_TRACE([CPPFLAGS])
+m4trace:configure.ac:92: -1- m4_pattern_allow([^CPPFLAGS$])
+m4trace:configure.ac:92: -1- AC_SUBST([CPP])
+m4trace:configure.ac:92: -1- AC_SUBST_TRACE([CPP])
+m4trace:configure.ac:92: -1- m4_pattern_allow([^CPP$])
 m4trace:configure.ac:96: -1- AM_CONDITIONAL([HAVE_ANDROID], [test x$HAVE_ANDROID != x])
 m4trace:configure.ac:96: -1- AC_SUBST([HAVE_ANDROID_TRUE])
 m4trace:configure.ac:96: -1- AC_SUBST_TRACE([HAVE_ANDROID_TRUE])
@@ -671,9 +698,9 @@ m4trace:configure.ac:105: -1- m4_pattern_allow([^_libcurl_config$])
 m4trace:configure.ac:105: -1- AC_SUBST([_libcurl_config])
 m4trace:configure.ac:105: -1- AC_SUBST_TRACE([_libcurl_config])
 m4trace:configure.ac:105: -1- m4_pattern_allow([^_libcurl_config$])
-m4trace:configure.ac:105: -2- AC_DEFINE_TRACE_LITERAL([curl_free])
-m4trace:configure.ac:105: -2- m4_pattern_allow([^curl_free$])
-m4trace:configure.ac:105: -2- AH_OUTPUT([curl_free], [/* Define curl_free() as free() if our version of curl lacks curl_free. */
+m4trace:configure.ac:105: -1- AC_DEFINE_TRACE_LITERAL([curl_free])
+m4trace:configure.ac:105: -1- m4_pattern_allow([^curl_free$])
+m4trace:configure.ac:105: -1- AH_OUTPUT([curl_free], [/* Define curl_free() as free() if our version of curl lacks curl_free. */
 @%:@undef curl_free])
 m4trace:configure.ac:105: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LIBCURL])
 m4trace:configure.ac:105: -1- m4_pattern_allow([^HAVE_LIBCURL$])
