--- a/verus/.deps/ccminer-haraka_portable.Po
+++ b/verus/.deps/ccminer-haraka_portable.Po
@@ -1,117 +1,114 @@
 verus/ccminer-haraka_portable.o: verus/haraka_portable.c \
-  /usr/include/stdio.h \
-  /usr/include/aarch64-linux-gnu/bits/libc-header-start.h \
-  /usr/include/features.h /usr/include/stdc-predef.h \
-  /usr/include/aarch64-linux-gnu/sys/cdefs.h \
-  /usr/include/aarch64-linux-gnu/bits/wordsize.h \
-  /usr/include/aarch64-linux-gnu/bits/long-double.h \
-  /usr/include/aarch64-linux-gnu/gnu/stubs.h \
-  /usr/include/aarch64-linux-gnu/gnu/stubs-lp64.h \
-  /usr/lib/llvm-16/lib/clang/16/include/stddef.h \
-  /usr/lib/llvm-16/lib/clang/16/include/stdarg.h \
-  /usr/include/aarch64-linux-gnu/bits/types.h \
-  /usr/include/aarch64-linux-gnu/bits/typesizes.h \
-  /usr/include/aarch64-linux-gnu/bits/types/__fpos_t.h \
-  /usr/include/aarch64-linux-gnu/bits/types/__mbstate_t.h \
-  /usr/include/aarch64-linux-gnu/bits/types/__fpos64_t.h \
-  /usr/include/aarch64-linux-gnu/bits/types/__FILE.h \
-  /usr/include/aarch64-linux-gnu/bits/types/FILE.h \
-  /usr/include/aarch64-linux-gnu/bits/types/struct_FILE.h \
-  /usr/include/aarch64-linux-gnu/bits/stdio_lim.h \
-  /usr/include/aarch64-linux-gnu/bits/sys_errlist.h \
-  /usr/include/aarch64-linux-gnu/bits/stdio.h /usr/include/string.h \
-  /usr/include/aarch64-linux-gnu/bits/types/locale_t.h \
-  /usr/include/aarch64-linux-gnu/bits/types/__locale_t.h \
-  /usr/include/strings.h /usr/include/stdlib.h \
-  /usr/include/aarch64-linux-gnu/bits/waitflags.h \
-  /usr/include/aarch64-linux-gnu/bits/waitstatus.h \
-  /usr/include/aarch64-linux-gnu/bits/floatn.h \
-  /usr/include/aarch64-linux-gnu/bits/floatn-common.h \
-  /usr/include/aarch64-linux-gnu/sys/types.h \
-  /usr/include/aarch64-linux-gnu/bits/types/clock_t.h \
-  /usr/include/aarch64-linux-gnu/bits/types/clockid_t.h \
-  /usr/include/aarch64-linux-gnu/bits/types/time_t.h \
-  /usr/include/aarch64-linux-gnu/bits/types/timer_t.h \
-  /usr/include/aarch64-linux-gnu/bits/stdint-intn.h \
-  /usr/include/endian.h /usr/include/aarch64-linux-gnu/bits/endian.h \
-  /usr/include/aarch64-linux-gnu/bits/byteswap.h \
-  /usr/include/aarch64-linux-gnu/bits/uintn-identity.h \
-  /usr/include/aarch64-linux-gnu/sys/select.h \
-  /usr/include/aarch64-linux-gnu/bits/select.h \
-  /usr/include/aarch64-linux-gnu/bits/types/sigset_t.h \
-  /usr/include/aarch64-linux-gnu/bits/types/__sigset_t.h \
-  /usr/include/aarch64-linux-gnu/bits/types/struct_timeval.h \
-  /usr/include/aarch64-linux-gnu/bits/types/struct_timespec.h \
-  /usr/include/aarch64-linux-gnu/bits/pthreadtypes.h \
-  /usr/include/aarch64-linux-gnu/bits/thread-shared-types.h \
-  /usr/include/aarch64-linux-gnu/bits/pthreadtypes-arch.h \
-  /usr/include/alloca.h \
-  /usr/include/aarch64-linux-gnu/bits/stdlib-bsearch.h \
-  /usr/include/aarch64-linux-gnu/bits/stdlib-float.h \
+  /data/data/com.termux/files/usr/include/stdio.h \
+  /data/data/com.termux/files/usr/include/sys/cdefs.h \
+  /data/data/com.termux/files/usr/include/android/versioning.h \
+  /data/data/com.termux/files/usr/include/android/api-level.h \
+  /data/data/com.termux/files/usr/include/bits/get_device_api_level_inlines.h \
+  /data/data/com.termux/files/usr/include/android/ndk-version.h \
+  /data/data/com.termux/files/usr/include/sys/types.h \
+  /data/data/com.termux/files/usr/lib/clang/19/include/stddef.h \
+  /data/data/com.termux/files/usr/lib/clang/19/include/__stddef_header_macro.h \
+  /data/data/com.termux/files/usr/lib/clang/19/include/__stddef_ptrdiff_t.h \
+  /data/data/com.termux/files/usr/lib/clang/19/include/__stddef_size_t.h \
+  /data/data/com.termux/files/usr/lib/clang/19/include/__stddef_wchar_t.h \
+  /data/data/com.termux/files/usr/lib/clang/19/include/__stddef_null.h \
+  /data/data/com.termux/files/usr/lib/clang/19/include/__stddef_max_align_t.h \
+  /data/data/com.termux/files/usr/lib/clang/19/include/__stddef_offsetof.h \
+  /data/data/com.termux/files/usr/lib/clang/19/include/stdint.h \
+  /data/data/com.termux/files/usr/include/stdint.h \
+  /data/data/com.termux/files/usr/include/bits/wchar_limits.h \
+  /data/data/com.termux/files/usr/include/linux/types.h \
+  /data/data/com.termux/files/usr/include/aarch64-linux-android/asm/types.h \
+  /data/data/com.termux/files/usr/include/asm-generic/types.h \
+  /data/data/com.termux/files/usr/include/asm-generic/int-ll64.h \
+  /data/data/com.termux/files/usr/include/aarch64-linux-android/asm/bitsperlong.h \
+  /data/data/com.termux/files/usr/include/asm-generic/bitsperlong.h \
+  /data/data/com.termux/files/usr/include/linux/posix_types.h \
+  /data/data/com.termux/files/usr/include/linux/stddef.h \
+  /data/data/com.termux/files/usr/include/linux/compiler_types.h \
+  /data/data/com.termux/files/usr/include/linux/compiler.h \
+  /data/data/com.termux/files/usr/include/aarch64-linux-android/asm/posix_types.h \
+  /data/data/com.termux/files/usr/include/asm-generic/posix_types.h \
+  /data/data/com.termux/files/usr/include/bits/pthread_types.h \
+  /data/data/com.termux/files/usr/lib/clang/19/include/stdarg.h \
+  /data/data/com.termux/files/usr/lib/clang/19/include/__stdarg_header_macro.h \
+  /data/data/com.termux/files/usr/lib/clang/19/include/__stdarg___gnuc_va_list.h \
+  /data/data/com.termux/files/usr/lib/clang/19/include/__stdarg_va_list.h \
+  /data/data/com.termux/files/usr/lib/clang/19/include/__stdarg_va_arg.h \
+  /data/data/com.termux/files/usr/lib/clang/19/include/__stdarg___va_copy.h \
+  /data/data/com.termux/files/usr/lib/clang/19/include/__stdarg_va_copy.h \
+  /data/data/com.termux/files/usr/include/string.h \
+  /data/data/com.termux/files/usr/include/xlocale.h \
+  /data/data/com.termux/files/usr/include/bits/strcasecmp.h \
+  /data/data/com.termux/files/usr/include/aarch64-linux-android/asm/fcntl.h \
+  /data/data/com.termux/files/usr/include/asm-generic/fcntl.h \
+  /data/data/com.termux/files/usr/include/bits/flock64.h \
+  /data/data/com.termux/files/usr/include/bits/flock.h \
+  /data/data/com.termux/files/usr/include/bits/seek_constants.h \
+  /data/data/com.termux/files/usr/include/stdlib.h \
+  /data/data/com.termux/files/usr/include/alloca.h \
+  /data/data/com.termux/files/usr/include/bits/wait.h \
+  /data/data/com.termux/files/usr/include/linux/wait.h \
+  /data/data/com.termux/files/usr/include/malloc.h \
+  /data/data/com.termux/files/usr/include/android/legacy_stdlib_inlines.h \
   verus/haraka_portable.h sse2neon.h \
-  /usr/lib/llvm-16/lib/clang/16/include/stdint.h /usr/include/stdint.h \
-  /usr/include/aarch64-linux-gnu/bits/wchar.h \
-  /usr/include/aarch64-linux-gnu/bits/stdint-uintn.h \
-  /usr/lib/llvm-16/lib/clang/16/include/arm_neon.h \
-  /usr/lib/llvm-16/lib/clang/16/include/arm_bf16.h
-/usr/include/stdio.h:
-/usr/include/aarch64-linux-gnu/bits/libc-header-start.h:
-/usr/include/features.h:
-/usr/include/stdc-predef.h:
-/usr/include/aarch64-linux-gnu/sys/cdefs.h:
-/usr/include/aarch64-linux-gnu/bits/wordsize.h:
-/usr/include/aarch64-linux-gnu/bits/long-double.h:
-/usr/include/aarch64-linux-gnu/gnu/stubs.h:
-/usr/include/aarch64-linux-gnu/gnu/stubs-lp64.h:
-/usr/lib/llvm-16/lib/clang/16/include/stddef.h:
-/usr/lib/llvm-16/lib/clang/16/include/stdarg.h:
-/usr/include/aarch64-linux-gnu/bits/types.h:
-/usr/include/aarch64-linux-gnu/bits/typesizes.h:
-/usr/include/aarch64-linux-gnu/bits/types/__fpos_t.h:
-/usr/include/aarch64-linux-gnu/bits/types/__mbstate_t.h:
-/usr/include/aarch64-linux-gnu/bits/types/__fpos64_t.h:
-/usr/include/aarch64-linux-gnu/bits/types/__FILE.h:
-/usr/include/aarch64-linux-gnu/bits/types/FILE.h:
-/usr/include/aarch64-linux-gnu/bits/types/struct_FILE.h:
-/usr/include/aarch64-linux-gnu/bits/stdio_lim.h:
-/usr/include/aarch64-linux-gnu/bits/sys_errlist.h:
-/usr/include/aarch64-linux-gnu/bits/stdio.h:
-/usr/include/string.h:
-/usr/include/aarch64-linux-gnu/bits/types/locale_t.h:
-/usr/include/aarch64-linux-gnu/bits/types/__locale_t.h:
-/usr/include/strings.h:
-/usr/include/stdlib.h:
-/usr/include/aarch64-linux-gnu/bits/waitflags.h:
-/usr/include/aarch64-linux-gnu/bits/waitstatus.h:
-/usr/include/aarch64-linux-gnu/bits/floatn.h:
-/usr/include/aarch64-linux-gnu/bits/floatn-common.h:
-/usr/include/aarch64-linux-gnu/sys/types.h:
-/usr/include/aarch64-linux-gnu/bits/types/clock_t.h:
-/usr/include/aarch64-linux-gnu/bits/types/clockid_t.h:
-/usr/include/aarch64-linux-gnu/bits/types/time_t.h:
-/usr/include/aarch64-linux-gnu/bits/types/timer_t.h:
-/usr/include/aarch64-linux-gnu/bits/stdint-intn.h:
-/usr/include/endian.h:
-/usr/include/aarch64-linux-gnu/bits/endian.h:
-/usr/include/aarch64-linux-gnu/bits/byteswap.h:
-/usr/include/aarch64-linux-gnu/bits/uintn-identity.h:
-/usr/include/aarch64-linux-gnu/sys/select.h:
-/usr/include/aarch64-linux-gnu/bits/select.h:
-/usr/include/aarch64-linux-gnu/bits/types/sigset_t.h:
-/usr/include/aarch64-linux-gnu/bits/types/__sigset_t.h:
-/usr/include/aarch64-linux-gnu/bits/types/struct_timeval.h:
-/usr/include/aarch64-linux-gnu/bits/types/struct_timespec.h:
-/usr/include/aarch64-linux-gnu/bits/pthreadtypes.h:
-/usr/include/aarch64-linux-gnu/bits/thread-shared-types.h:
-/usr/include/aarch64-linux-gnu/bits/pthreadtypes-arch.h:
-/usr/include/alloca.h:
-/usr/include/aarch64-linux-gnu/bits/stdlib-bsearch.h:
-/usr/include/aarch64-linux-gnu/bits/stdlib-float.h:
+  /data/data/com.termux/files/usr/lib/clang/19/include/arm_neon.h \
+  /data/data/com.termux/files/usr/lib/clang/19/include/arm_bf16.h \
+  /data/data/com.termux/files/usr/lib/clang/19/include/arm_vector_types.h
+/data/data/com.termux/files/usr/include/stdio.h:
+/data/data/com.termux/files/usr/include/sys/cdefs.h:
+/data/data/com.termux/files/usr/include/android/versioning.h:
+/data/data/com.termux/files/usr/include/android/api-level.h:
+/data/data/com.termux/files/usr/include/bits/get_device_api_level_inlines.h:
+/data/data/com.termux/files/usr/include/android/ndk-version.h:
+/data/data/com.termux/files/usr/include/sys/types.h:
+/data/data/com.termux/files/usr/lib/clang/19/include/stddef.h:
+/data/data/com.termux/files/usr/lib/clang/19/include/__stddef_header_macro.h:
+/data/data/com.termux/files/usr/lib/clang/19/include/__stddef_ptrdiff_t.h:
+/data/data/com.termux/files/usr/lib/clang/19/include/__stddef_size_t.h:
+/data/data/com.termux/files/usr/lib/clang/19/include/__stddef_wchar_t.h:
+/data/data/com.termux/files/usr/lib/clang/19/include/__stddef_null.h:
+/data/data/com.termux/files/usr/lib/clang/19/include/__stddef_max_align_t.h:
+/data/data/com.termux/files/usr/lib/clang/19/include/__stddef_offsetof.h:
+/data/data/com.termux/files/usr/lib/clang/19/include/stdint.h:
+/data/data/com.termux/files/usr/include/stdint.h:
+/data/data/com.termux/files/usr/include/bits/wchar_limits.h:
+/data/data/com.termux/files/usr/include/linux/types.h:
+/data/data/com.termux/files/usr/include/aarch64-linux-android/asm/types.h:
+/data/data/com.termux/files/usr/include/asm-generic/types.h:
+/data/data/com.termux/files/usr/include/asm-generic/int-ll64.h:
+/data/data/com.termux/files/usr/include/aarch64-linux-android/asm/bitsperlong.h:
+/data/data/com.termux/files/usr/include/asm-generic/bitsperlong.h:
+/data/data/com.termux/files/usr/include/linux/posix_types.h:
+/data/data/com.termux/files/usr/include/linux/stddef.h:
+/data/data/com.termux/files/usr/include/linux/compiler_types.h:
+/data/data/com.termux/files/usr/include/linux/compiler.h:
+/data/data/com.termux/files/usr/include/aarch64-linux-android/asm/posix_types.h:
+/data/data/com.termux/files/usr/include/asm-generic/posix_types.h:
+/data/data/com.termux/files/usr/include/bits/pthread_types.h:
+/data/data/com.termux/files/usr/lib/clang/19/include/stdarg.h:
+/data/data/com.termux/files/usr/lib/clang/19/include/__stdarg_header_macro.h:
+/data/data/com.termux/files/usr/lib/clang/19/include/__stdarg___gnuc_va_list.h:
+/data/data/com.termux/files/usr/lib/clang/19/include/__stdarg_va_list.h:
+/data/data/com.termux/files/usr/lib/clang/19/include/__stdarg_va_arg.h:
+/data/data/com.termux/files/usr/lib/clang/19/include/__stdarg___va_copy.h:
+/data/data/com.termux/files/usr/lib/clang/19/include/__stdarg_va_copy.h:
+/data/data/com.termux/files/usr/include/string.h:
+/data/data/com.termux/files/usr/include/xlocale.h:
+/data/data/com.termux/files/usr/include/bits/strcasecmp.h:
+/data/data/com.termux/files/usr/include/aarch64-linux-android/asm/fcntl.h:
+/data/data/com.termux/files/usr/include/asm-generic/fcntl.h:
+/data/data/com.termux/files/usr/include/bits/flock64.h:
+/data/data/com.termux/files/usr/include/bits/flock.h:
+/data/data/com.termux/files/usr/include/bits/seek_constants.h:
+/data/data/com.termux/files/usr/include/stdlib.h:
+/data/data/com.termux/files/usr/include/alloca.h:
+/data/data/com.termux/files/usr/include/bits/wait.h:
+/data/data/com.termux/files/usr/include/linux/wait.h:
+/data/data/com.termux/files/usr/include/malloc.h:
+/data/data/com.termux/files/usr/include/android/legacy_stdlib_inlines.h:
 verus/haraka_portable.h:
 sse2neon.h:
-/usr/lib/llvm-16/lib/clang/16/include/stdint.h:
-/usr/include/stdint.h:
-/usr/include/aarch64-linux-gnu/bits/wchar.h:
-/usr/include/aarch64-linux-gnu/bits/stdint-uintn.h:
-/usr/lib/llvm-16/lib/clang/16/include/arm_neon.h:
-/usr/lib/llvm-16/lib/clang/16/include/arm_bf16.h:
+/data/data/com.termux/files/usr/lib/clang/19/include/arm_neon.h:
+/data/data/com.termux/files/usr/lib/clang/19/include/arm_bf16.h:
+/data/data/com.termux/files/usr/lib/clang/19/include/arm_vector_types.h:
